<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedCoinData">

    <ImageView
        android:id="@+id/detail_backSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/iamge_margin_left"
        android:layout_marginLeft="@dimen/iamge_margin_left"
        android:layout_marginEnd="@dimen/margin_end_image"
        android:layout_marginRight="@dimen/image_margin_right"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/detail_viewbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/detail_coin_Name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_coin_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_coinName"
        android:layout_marginLeft="@dimen/margin_left_coinName"
        android:layout_marginTop="@dimen/margin_right_coinName"
        android:text="@string/bitcoin"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textSize_coinName"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/detail_viewbar"
        app:layout_constraintLeft_toRightOf="@+id/detail_backSign"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_end_usd"
        android:paddingRight="@dimen/padding_right_usd"
        android:text="@string/usd"
        android:textSize="@dimen/text_size_usd"
        app:layout_constraintBottom_toTopOf="@+id/detail_viewbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/detail_viewbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_view"
        android:layout_marginTop="@dimen/margin_top_view"
        android:background="@color/colorLightGrey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_coin_Name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_constraint_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_layout_constraint"
        app:layout_constraintBottom_toTopOf="@+id/detail_graph_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detail_viewbar">

        <ImageView
            android:id="@+id/detail_coin_symbol_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_image"
            android:layout_marginStart="@dimen/margin_left_image"
            android:layout_marginLeft="@dimen/margin_left_image"
            android:layout_marginEnd="@dimen/margin_end_image_view"
            android:layout_marginRight="@dimen/margin_right_image_view"
            android:src="@mipmap/app_dp_round"
            app:layout_constraintBottom_toBottomOf="@+id/detail_constraint_follow"
            app:layout_constraintLeft_toLeftOf="@+id/detail_constraint_follow"
            app:layout_constraintTop_toTopOf="@+id/detail_constraint_follow" />

        <TextView
            android:id="@+id/detail_total_volume_prize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_coinData"
            android:layout_marginRight="@dimen/marginright_coinData"
            android:gravity="end"
            android:text="@string/_9807_01"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_coindata"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/detail_percentage_prize"
            app:layout_constraintLeft_toRightOf="@+id/detail_coin_symbol_image"
            app:layout_constraintRight_toLeftOf="@+id/detail_follow"
            app:layout_constraintTop_toTopOf="@+id/detail_constraint_follow" />

        <TextView
            android:id="@+id/detail_percentage_prize"
            android:layout_width="@dimen/width_upandDown"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_marginend_updown"
            android:layout_marginRight="@dimen/margin_right_upanddown"
            android:gravity="end"
            android:text="@string/_2_80"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/text_size_upanddown"
            app:layout_constraintBottom_toBottomOf="@+id/detail_constraint_follow"
            app:layout_constraintLeft_toRightOf="@+id/detail_coin_symbol_image"
            app:layout_constraintRight_toLeftOf="@+id/detail_follow"
            app:layout_constraintTop_toBottomOf="@+id/detail_total_volume_prize" />

        <TextView
            android:id="@+id/detail_follow"
            android:layout_width="@dimen/width_follow"
            android:layout_height="@dimen/height_follow"
            android:layout_marginEnd="@dimen/margin_end_follow"
            android:layout_marginRight="14dp"
            android:background="@drawable/rounded_border_follow"
            android:paddingTop="4dp"
            android:text="@string/follow"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_follow"
            app:layout_constraintBottom_toBottomOf="@+id/detail_constraint_follow"
            app:layout_constraintLeft_toRightOf="@+id/detail_total_volume_prize"
            app:layout_constraintRight_toRightOf="@id/detail_constraint_follow"
            app:layout_constraintTop_toTopOf="@+id/detail_constraint_follow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_graph_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_graph"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_constraint_follow">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chart_height"
            app:layout_constraintBottom_toBottomOf="@id/detail_graph_bar"
            app:layout_constraintTop_toTopOf="@id/detail_graph_bar">

        </com.github.mikephil.charting.charts.LineChart>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_left_constraint"
        android:layout_width="@dimen/width_marketcapside"
        android:layout_height="@dimen/height_marketcapside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/detail_right_constraint"
        app:layout_constraintTop_toBottomOf="@+id/detail_graph_bar">

        <TextView
            android:id="@+id/detail_market_cap"
            style="@style/detailCoinsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_cap"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toTopOf="@+id/detail_total_vol_24h"
            app:layout_constraintRight_toRightOf="@+id/detail_left_constraint"
            app:layout_constraintTop_toTopOf="@+id/detail_left_constraint" />

        <TextView
            android:id="@+id/detail_total_vol_24h"
            style="@style/detailCoinsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_vol_24h"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toTopOf="@+id/detail_direct_vol_24h"
            app:layout_constraintRight_toRightOf="@+id/detail_left_constraint"
            app:layout_constraintTop_toBottomOf="@+id/detail_market_cap" />

        <TextView
            android:id="@+id/detail_direct_vol_24h"
            style="@style/detailCoinsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direct_vol_24h"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toTopOf="@+id/detail_direct_dollar"
            app:layout_constraintRight_toRightOf="@+id/detail_left_constraint"
            app:layout_constraintTop_toBottomOf="@+id/detail_total_vol_24h" />

        <TextView
            android:id="@+id/detail_direct_dollar"
            style="@style/detailCoinsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direct_vol"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toTopOf="@+id/detail_open_24h"
            app:layout_constraintRight_toRightOf="@+id/detail_left_constraint"
            app:layout_constraintTop_toBottomOf="@+id/detail_direct_vol_24h" />

        <TextView
            android:id="@+id/detail_open_24h"
            style="@style/detailCoinsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_24h"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toTopOf="@+id/detail_high_low_24h"
            app:layout_constraintRight_toRightOf="@+id/detail_left_constraint"
            app:layout_constraintTop_toBottomOf="@+id/detail_direct_dollar" />

        <TextView
            android:id="@+id/detail_high_low_24h"
            style="@style/detailCoinsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_high_24h"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@+id/detail_left_constraint"
            app:layout_constraintTop_toBottomOf="@+id/detail_open_24h" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_right_constraint"
        android:layout_width="@dimen/width_marketcap_no"
        android:layout_height="@dimen/height_marketcap_no"
        android:paddingStart="@dimen/padding_start_market_no"
        android:paddingLeft="@dimen/padingleft_market_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/detail_left_constraint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_graph_bar">

        <TextView
            android:id="@+id/detail_market_cap_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_174_94_b"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_right"
            app:layout_constraintBottom_toTopOf="@+id/detail_total_vol_24h_number"
            app:layout_constraintLeft_toLeftOf="@+id/detail_right_constraint"
            app:layout_constraintTop_toTopOf="@+id/detail_right_constraint" />

        <TextView
            android:id="@+id/detail_total_vol_24h_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_284_12_k"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_right"
            app:layout_constraintBottom_toTopOf="@+id/detail_direct_vol_24h_number"
            app:layout_constraintLeft_toLeftOf="@+id/detail_right_constraint"
            app:layout_constraintTop_toBottomOf="@+id/detail_market_cap_number" />

        <TextView
            android:id="@+id/detail_direct_vol_24h_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_36_106_4"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_right"
            app:layout_constraintBottom_toTopOf="@+id/detail_direct_dollar_number"
            app:layout_constraintLeft_toLeftOf="@+id/detail_right_constraint"
            app:layout_constraintTop_toBottomOf="@+id/detail_total_vol_24h_number" />

        <TextView
            android:id="@+id/detail_open_24h_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_089_8"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_right"
            app:layout_constraintBottom_toTopOf="@+id/detail_low_24h_number"
            app:layout_constraintLeft_toLeftOf="@+id/detail_right_constraint"
            app:layout_constraintTop_toBottomOf="@+id/detail_direct_dollar_number" />

        <TextView
            android:id="@+id/detail_direct_dollar_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_357_174_519_3"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_right"
            app:layout_constraintBottom_toTopOf="@+id/detail_open_24h_number"
            app:layout_constraintLeft_toLeftOf="@+id/detail_right_constraint"
            app:layout_constraintTop_toBottomOf="@+id/detail_direct_vol_24h_number" />

        <TextView
            android:id="@+id/detail_low_24h_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9_648_55"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/detail_right_constraint"
            app:layout_constraintTop_toBottomOf="@+id/detail_open_24h_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>